Update homepage content

--- a/index.html
+++ b/index.html
@@ -1,8 +1,18 @@
-echo "<!DOCTYPE html>
-<html>
-<head><title>quant.github.io</title></head>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <title>Quant Projects</title>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      padding: 2rem;
+      text-align: center;
+    }
+  </style>
+</head>
 <body>
-<h1>🚀 Welcome to quant.github.io</h1>
-<p>This is your GitHub Pages homepage.</p>
+  <h1>Welcome to Quant.github.io</h1>
+  <p>This site hosts projects, notebooks, and tools related to quantitative finance.</p>
 </body>
-</html>" > index.html
+</html>
