index.html content

--- a/index.html
+++ b/index.html
@@ -13,6 +13,6 @@
 </head>
 <body>
   <h1>Welcome to Quant.github.io</h1>
-  <p>This site hosts projects, notebooks, and tools related to quantitative finance.</p>
+  <p>This site hosts projects, notebooks, and tools related to quant finance.</p>
 </body>
 </html>
