Update homepage for deploy test

--- a/index.html
+++ b/index.html
@@ -1,18 +1,8 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>Quant Projects</title>
-  <style>
-    body {
-      font-family: Arial, sans-serif;
-      padding: 2rem;
-      text-align: center;
-    }
-  </style>
-</head>
+<html>
+<head><title>quant.github.io - Update Test</title></head>
 <body>
-  <h1>Welcome to Quant.github.io</h1>
-  <p>This site hosts projects, notebooks, and tools related to quant finance.</p>
+<h1>✅ GitHub Deployment Test</h1>
+<p>This is a new version deployed via GitHub Actions to EC2 🚀</p>
 </body>
 </html>
