--- a/index.html
+++ b/index.html
@@ -3,16 +3,211 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Ratanlal Mahanta | Quant Trading Products</title>
-  <link rel="stylesheet" href="styles.css" />
-  <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
+  <meta name="description" content="Ratanlal Mahanta's profile in Computational Finance and AI-driven Quantitative Research." />
+  <meta name="keywords" content="Computational Finance, AI, Quantitative Research, Risk Management, Derivatives, Machine Learning, Fintech" />
+  <meta name="author" content="Ratanlal Mahanta" />
+  <meta name="theme-color" content="#1a1a1a" />
+  <meta property="og:title" content="Ratanlal Mahanta | Computational Finance & AI Quant Research" />
+  <meta property="og:description" content="Quantitative Finance, AI research, and model validation expertise. Explore simulation engines, CVA, FRTB, repo risk, and more." />
+  <meta property="og:image" content="https://yourdomain.com/assets/images/ratanlal-mahanta.jpg" />
+  <meta property="og:type" content="website" />
+  <title>Ratanlal Mahanta | Computational Finance & AI Quant Research</title>
+  <link rel="icon" href="assets/favicon.ico" type="image/x-icon" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" />
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      margin: 0;
+      padding: 0;
+      background: #f4f4f4;
+      color: #222;
+    }
+
+    header {
+      background: #1a1a1a;
+      color: white;
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+      padding: 10px 20px;
+    }
+
+    header h1 {
+      margin: 0;
+      font-size: 1.8em;
+    }
+
+    header p {
+      margin: 0;
+      font-size: 0.9em;
+      color: #ccc;
+    }
+
+    #menu-toggle {
+      background: none;
+      border: none;
+      color: white;
+      font-size: 1.5em;
+      cursor: pointer;
+    }
+
+    aside.sidebar {
+      position: fixed;
+      top: 0;
+      left: -250px;
+      width: 250px;
+      height: 100%;
+      background: #333;
+      padding-top: 60px;
+      overflow-y: auto;
+      transition: left 0.3s ease-in-out;
+      z-index: 1000;
+    }
+
+    .sidebar.active {
+      left: 0;
+    }
+
+    .sidebar ul {
+      list-style: none;
+      padding: 0;
+      margin: 0;
+    }
+
+    .sidebar ul li {
+      padding: 15px 20px;
+    }
+
+    .sidebar ul li a {
+      color: white;
+      text-decoration: none;
+      display: block;
+      font-weight: bold;
+      cursor: pointer;
+    }
+
+    .sidebar ul li a:hover,
+    .sidebar ul li a.active {
+      background: #444;
+      color: #2ecc71;
+    }
+
+    .submenu {
+      display: none;
+      padding-left: 10px;
+      transition: all 0.3s ease-in-out;
+    }
+
+    .submenu li {
+      padding: 8px 20px;
+      font-weight: normal;
+    }
+
+    .submenu li a {
+      color: #ccc;
+      font-weight: normal;
+    }
+
+    .submenu li a:hover {
+      color: #2ecc71;
+    }
+
+    #close-btn {
+      position: absolute;
+      top: 10px;
+      right: 15px;
+      background: none;
+      border: none;
+      color: white;
+      font-size: 1.2em;
+      cursor: pointer;
+    }
+
+    .right-sidebar {
+      position: fixed;
+      top: 0;
+      right: -250px;
+      width: 250px;
+      height: 100%;
+      background: #222;
+      color: white;
+      padding-top: 60px;
+      overflow-y: auto;
+      transition: right 0.3s ease-in-out;
+      z-index: 1000;
+    }
+
+    .right-sidebar.active {
+      right: 0;
+    }
+
+    main {
+      padding: 20px;
+      max-width: 1000px;
+      margin: auto;
+    }
+
+    h2, h3 {
+      color: #1a1a1a;
+    }
+
+    footer {
+      background: #1a1a1a;
+      color: #ccc;
+      text-align: center;
+      padding: 20px;
+    }
+
+    footer a {
+      color: #ccc;
+      margin: 0 10px;
+      text-decoration: none;
+    }
+
+    footer a:hover {
+      color: #2ecc71;
+    }
+
+    .social-media i {
+      margin: 0 5px;
+      font-size: 1.2em;
+    }
+
+    .sr-only {
+      position: absolute;
+      left: -9999px;
+      top: auto;
+      width: 1px;
+      height: 1px;
+      overflow: hidden;
+    }
+
+    @media (max-width: 768px) {
+      header h1 {
+        font-size: 1.4em;
+      }
+
+      #menu-toggle {
+        font-size: 1.3em;
+      }
+
+      .sidebar ul li {
+        padding: 12px 16px;
+      }
+
+      main {
+        padding: 15px;
+      }
+    }
+  </style>
 </head>
+
 <body>
   <header>
     <button id="menu-toggle" aria-label="Open menu" aria-expanded="false"><i class="fas fa-bars"></i></button>
     <div>
       <h1>Ratanlal Mahanta</h1>
-      <p>Quant Trading Products | AI-Powered Finance</p>
+      <p>Computational Finance | AI-Driven Quantitative Research</p>
     </div>
   </header>
 
@@ -22,53 +217,134 @@
       <li><a href="index.html" class="active">Home</a></li>
 
       <li>
-        <a class="has-submenu" id="productToggle">Quant Products <i class="fas fa-caret-down" style="float:right;"></i></a>
-        <ul class="submenu" id="productSubmenu">
-          <li><a href="fx.html">FX & Rates Models</a></li>
-          <li><a href="equity.html">Equity Derivatives</a></li>
-          <li><a href="crypto.html">Crypto Strategies</a></li>
-          <li><a href="ml.html">ML-Based Trading</a></li>
-          <li><a href="risk.html">Risk & CVA Tools</a></li>
-          <li><a href="hedging.html">Dynamic Hedging</a></li>
-          <li><a href="backtest.html">Backtesting Frameworks</a></li>
-          <li><a href="infra.html">Simulation Infrastructure</a></li>
+        <a class="has-submenu" id="RDToggle">R&D <i class="fas fa-caret-down" style="float:right;"></i></a>
+        <ul class="submenu" id="rdSubmenu">
+          <li><a href="about.html">About</a></li>
+          <li><a href="projects.html">Projects</a></li>
+          <li><a href="publications.html">Publications</a></li>
+          <li><a href="Lab.html">Lab & Innovation</a></li>
         </ul>
       </li>
 
-      <li><a href="research.html">Research & Innovation</a></li>
-      <li><a href="publications.html">Publications</a></li>
-      <li><a href="lab.html">Quant Lab</a></li>
-      <li><a href="contact.html">Contact</a></li>
+      <li>
+        <a class="has-submenu" id="workToggle">Work Experience <i class="fas fa-caret-down" style="float:right;"></i></a>
+        <ul class="submenu" id="workExpSubmenu">
+          <li><a href="Work.html">Timeline</a></li>
+          <li><a href="rsrl.html">RsRL</a></li>
+          <li><a href="cts.html">Cognizant</a></li>
+          <li><a href="gpsk.html">GPSK</a></li>
+          <li><a href="algotech.html">Algotech</a></li>
+          <li><a href="sharekhan.html">Sharekhan</a></li>
+        </ul>
+      </li>
+
+      <li>
+        <a class="has-submenu" id="quantToggle">Quant Research <i class="fas fa-caret-down" style="float:right;"></i></a>
+        <ul class="submenu" id="quantSubmenu">
+          <li><a href="FX.html">FX & IR</a></li>
+          <li><a href="Com.html">Commodity</a></li>
+          <li><a href="Eq.html">Equity</a></li>
+          <li><a href="Crypto.html">Crypto</a></li>
+          <li><a href="research_update.html">Product Design</a></li>
+        </ul>
+      </li>
+
+      <li>
+        <a class="has-submenu" id="ReferenceToggle">Reference <i class="fas fa-caret-down" style="float:right;"></i></a>
+        <ul class="submenu" id="ReferenceSubmenu">
+          <li><a href="blog.html">Blog</a></li>
+          <li><a href="blog.html">Conference</a></li>
+          <li><a href="blog.html">Lecture Series</a></li>
+          <li><a href="blog.html">Reading List</a></li>
+          <li><a href="blog.html">System Design</a></li>
+        </ul>
+      </li>
+    </ul>
+  </aside>
+
+  <aside id="right-sidebar" class="right-sidebar" aria-label="Context Tools Sidebar">
+    <button id="close-btn-right" aria-label="Close right menu"><i class="fas fa-times"></i></button>
+    <ul>
+      <li><a href="#">📌 Notes</a></li>
+      <li><a href="#">📅 Schedule</a></li>
+      <li><a href="#">📚 Reading</a></li>
+      <li><a href="#">🧠 Ideas</a></li>
     </ul>
   </aside>
 
   <main>
-    <section class="intro">
-      <h2>Welcome to My Quant Trading Product Portfolio</h2>
-      <p>This site showcases advanced trading models and financial engineering tools built using Python, C++, and R. Explore FX models, volatility surface engines, ML alpha strategies, CVA analytics, and dynamic hedging systems for institutional applications.</p>
-    </section>
+    <!-- Your blog and content sections remain here -->
 
-    <section class="product-highlight">
-      <h3>Featured Product Areas</h3>
-      <ul>
-        <li><strong>FX & IR:</strong> Local volatility, HJM, and delta hedging engines</li>
-        <li><strong>Equity:</strong> Barrier options, American Monte Carlo pricing, Greeks</li>
-        <li><strong>Crypto:</strong> Momentum and machine learning-based forecasting</li>
-        <li><strong>Machine Learning:</strong> XGBoost alpha strategies, LSTM volatility predictors</li>
-        <li><strong>Risk:</strong> CVA engines, haircut stress, repo VaR, FRTB SA toolkits</li>
-      </ul>
+     <section id="intro">
+      <h2>Welcome</h2>
+      <img src="assets/images/ratanlal-mahanta.jpg" alt="Ratanlal Mahanta" />
+      <p>With 12 years of experience in <a href="https://en.wikipedia.org/wiki/Computational_finance" target="_blank">Computational Finance</a> and AI, I lead with a hands-on approach to developing and deploying <a href="https://en.wikipedia.org/wiki/Quantitative_analysis_(finance)#Quantitative_investment_management" target="_blank">advanced quantitative models</a>. My work integrates machine learning, stochastic processes, and complex risk management frameworks to address critical challenges in finance.</p>
+      <p>I build advanced simulation engines for pricing exotic options, XVA, and FRTB frameworks. I lead development of reusable model validation frameworks covering IRRBB, CVA, repo risk, and historical VaR. My work blends regulatory precision, ML inference, stochastic modeling, and capital analytics.</p>
+      <p>I’ve authored practical frameworks on topics like Bermudan swaption LSM hedging, t-copula basket default swaps, CDS pricing under Merton models, and repo haircut–spread dynamics. I develop institutional training programs, dashboards for audit-ready model governance, and LaTeX-based research deliverables.</p>
+      <p>My current focus: intelligent validation systems, Bayesian credit models, dynamic liquidity simulation under FRTB-SA, and margin stress engines with FX/repo contagion effects. Let’s shape robust financial systems through quant rigor and applied AI.</p>
+      <p>I specialize in the calibration and application of models such as the Heston model, Hull-White interest rate models, and the Merton model, tailoring them to meet the precise demands of risk management and market risk.</p>
+      <p>My recent projects include FRTB simulation frameworks, tail risk hedging, XVA and Bayesian inference models for predictive analytics. Explore my work and research to discover how AI and finance converge to shape tomorrow's markets.</p>
+      <p>With a deep focus on algorithmic trading infrastructure, I’ve built a modular, production-grade Python framework that spans the full lifecycle of quantitative strategy development—from signal generation to live server deployment.</p>
+      <p>This system integrates financial time series modeling, machine learning, and technical indicators to construct momentum, mean-reversion, and multi-factor rule-based strategies. I’ve engineered reusable components for data ingestion, preprocessing pipelines, and signal processing.</p>
     </section>
+  
   </main>
 
+  <footer>
+    <p>&copy; 2025 Ratanlal Mahanta | All Rights Reserved</p>
+    <p>Contact:
+      <a href="mailto:ratanlalmahanta@gmail.com" title="Email"><i class="fas fa-envelope"></i><span class="sr-only">Email</span></a>
+    </p>
+    <div class="social-media">
+      <a href="https://www.linkedin.com/in/ratanlalmahanta" target="_blank" title="LinkedIn"><i class="fab fa-linkedin"></i></a>
+      <a href="https://twitter.com/ratanlalmahanta" target="_blank" title="Twitter"><i class="fab fa-twitter"></i></a>
+      <a href="https://github.com/ratanlalmahanta" target="_blank" title="GitHub"><i class="fab fa-github"></i></a>
+      <a href="https://scholar.google.com/citations?user=SpE58EQAAAAJ&hl=en" target="_blank" title="Google Scholar"><i class="fas fa-graduation-cap"></i></a>
+      <a href="https://gemini.google.com/share/a59f97ec4a99" target="_blank" title="Google Gemini"><i class="fas fa-atom"></i></a>
+      <a href="https://x.com/i/grok/share/lGBpiRp0JUbOaTs2s3fLUtjHW" target="_blank" title="View on Grok via X"><i class="fas fa-brain"></i></a>
+    </div>
+  </footer>
+
   <script>
-    document.getElementById("menu-toggle").addEventListener("click", function () {
-      document.getElementById("sidebar").classList.toggle("active");
+    const sidebar = document.getElementById("sidebar");
+    const toggleBtn = document.getElementById("menu-toggle");
+    const closeBtn = document.getElementById("close-btn");
+
+    toggleBtn.addEventListener("click", () => {
+      sidebar.classList.toggle("active");
+      toggleBtn.setAttribute("aria-expanded", sidebar.classList.contains("active"));
     });
-    document.getElementById("close-btn").addEventListener("click", function () {
-      document.getElementById("sidebar").classList.remove("active");
+
+    closeBtn.addEventListener("click", () => {
+      sidebar.classList.remove("active");
+      toggleBtn.setAttribute("aria-expanded", "false");
     });
-    document.getElementById("productToggle").addEventListener("click", function () {
-      document.getElementById("productSubmenu").classList.toggle("active");
+
+    document.getElementById("RDToggle").addEventListener("click", () => {
+      const submenu = document.getElementById("rdSubmenu");
+      submenu.style.display = submenu.style.display === "block" ? "none" : "block";
+    });
+
+    document.getElementById("workToggle").addEventListener("click", () => {
+      const submenu = document.getElementById("workExpSubmenu");
+      submenu.style.display = submenu.style.display === "block" ? "none" : "block";
+    });
+
+    document.getElementById("quantToggle").addEventListener("click", () => {
+      const submenu = document.getElementById("quantSubmenu");
+      submenu.style.display = submenu.style.display === "block" ? "none" : "block";
+    });
+
+    document.getElementById("ReferenceToggle").addEventListener("click", () => {
+      const submenu = document.getElementById("ReferenceSubmenu");
+      submenu.style.display = submenu.style.display === "block" ? "none" : "block";
+    });
+
+    const rightSidebar = document.getElementById("right-sidebar");
+    const closeRightBtn = document.getElementById("close-btn-right");
+
+    closeRightBtn.addEventListener("click", () => {
+      rightSidebar.classList.remove("active");
     });
   </script>
 </body>
