Cleaned up backup folder, updated index.html, added new pages and assets

--- a/Lab.html
+++ b/Lab.html
@@ -273,21 +273,56 @@
   </aside>
 
   <main>
-    <!-- Your blog and content sections remain here -->
+      <header>
+    <h1><i class="fas fa-flask"></i> Projects Portfolio</h1>
+  </header>
 
-     <section id="intro">
-      <h2>Welcome</h2>
-      <img src="assets/images/ratanlal-mahanta.jpg" alt="Ratanlal Mahanta" />
-      <p>With 12 years of experience in <a href="https://en.wikipedia.org/wiki/Computational_finance" target="_blank">Computational Finance</a> and AI, I lead with a hands-on approach to developing and deploying <a href="https://en.wikipedia.org/wiki/Quantitative_analysis_(finance)#Quantitative_investment_management" target="_blank">advanced quantitative models</a>. My work integrates machine learning, stochastic processes, and complex risk management frameworks to address critical challenges in finance.</p>
-      <p>I build advanced simulation engines for pricing exotic options, XVA, and FRTB frameworks. I lead development of reusable model validation frameworks covering IRRBB, CVA, repo risk, and historical VaR. My work blends regulatory precision, ML inference, stochastic modeling, and capital analytics.</p>
-      <p>I’ve authored practical frameworks on topics like Bermudan swaption LSM hedging, t-copula basket default swaps, CDS pricing under Merton models, and repo haircut–spread dynamics. I develop institutional training programs, dashboards for audit-ready model governance, and LaTeX-based research deliverables.</p>
-      <p>My current focus: intelligent validation systems, Bayesian credit models, dynamic liquidity simulation under FRTB-SA, and margin stress engines with FX/repo contagion effects. Let’s shape robust financial systems through quant rigor and applied AI.</p>
-      <p>I specialize in the calibration and application of models such as the Heston model, Hull-White interest rate models, and the Merton model, tailoring them to meet the precise demands of risk management and market risk.</p>
-      <p>My recent projects include FRTB simulation frameworks, tail risk hedging, XVA and Bayesian inference models for predictive analytics. Explore my work and research to discover how AI and finance converge to shape tomorrow's markets.</p>
-      <p>With a deep focus on algorithmic trading infrastructure, I’ve built a modular, production-grade Python framework that spans the full lifecycle of quantitative strategy development—from signal generation to live server deployment.</p>
-      <p>This system integrates financial time series modeling, machine learning, and technical indicators to construct momentum, mean-reversion, and multi-factor rule-based strategies. I’ve engineered reusable components for data ingestion, preprocessing pipelines, and signal processing.</p>
-    </section>
-  
+  <section id="quant-trading-lab">
+    <h2><i class="fas fa-flask icon"></i> Quant Trading Research Lab</h2>
+
+    <p>
+      The <strong>Quant Trading Research Lab (QFCM Lab(bootstrap))</strong>, active from <em>Aug 2020 to Feb 2025</em>, focused on developing, validating, and deploying cutting-edge quantitative models and trading strategies across multi-asset portfolios. Leveraging stochastic processes, Monte Carlo simulations, and machine learning, the lab specialized in market risk analytics, derivatives pricing, and dynamic hedging under realistic macroeconomic and stress scenarios. The research supported risk-adjusted alpha generation in alignment with regulatory frameworks.
+    </p>
+
+    <h3><i class="fas fa-clock icon"></i> Project Timeline (2020 – 2025)</h3>
+
+    <div style="overflow-x:auto">
+      <table>
+        <thead>
+          <tr>
+            <th>Period</th>
+            <th>Quant Trading Projects</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr><td>2020Q3</td><td>Development Credit Risk Models for trading book exposures</td></tr>
+          <tr><td>2020Q3</td><td>COVID-19 stress testing applied to quant trading risk factors</td></tr>
+          <tr><td>2020Q3</td><td>Interest rate scenario simulation for hedging strategies</td></tr>
+          <tr><td>2020Q4</td><td>VaR & CVaR Monte Carlo engine for multi-asset trading portfolios</td></tr>
+          <tr><td>2021Q1</td><td>Merton-KMV framework implementation for CDS pricing and hedging</td></tr>
+          <tr><td>2021Q2</td><td>FRTB P&L Attribution Prototype integrating quant trading risk factors</td></tr>
+          <tr><td>2021Q3</td><td>Cross-asset Monte Carlo pricing library (C++), Greeks calculation</td></tr>
+          <tr><td>2021Q4</td><td>Volatility surface calibration for options trading strategies</td></tr>
+          <tr><td>2022Q1</td><td>Integration of GHG emissions risk in trading portfolio scenario analysis</td></tr>
+          <tr><td>2022Q2</td><td>CDO basket pricing with t-Copula Monte Carlo simulation</td></tr>
+          <tr><td>2022Q3</td><td>Explainable AI-driven credit score </td></tr>
+          <tr><td>2022Q4</td><td>Tail risk hedge simulation incorporating macroeconomic shocks</td></tr>
+          <tr><td>2023Q1</td><td>Streamlit dashboard for climate risk and trading portfolio stress testing</td></tr>
+          <tr><td>2023Q2</td><td>Proxy hedging framework for illiquid credit exposures</td></tr>
+          <tr><td>2023Q3</td><td>Calibration of G2++ and Hull-White models for swaption trading</td></tr>
+          <tr><td>2023Q4</td><td>LSM-based Bermudan swaption pricing and hedge testing</td></tr>
+          <tr><td>2024Q1</td><td>ARIMA-driven CDS spread forecasting for dynamic trading signals</td></tr>
+          <tr><td>2024Q2</td><td>Credit-market integrated VaR & CVaR risk simulator</td></tr>
+          <tr><td>2024Q3</td><td>3D simulation project (algorithmic trajectory optimization)</td></tr>
+          <tr><td>2024Q4</td><td>Quant model risk dashboard and validation </td></tr>
+          <tr><td>2025Q1</td><td>Real-time dynamic hedge efficiency analyzer with scenario input integration</td></tr>
+        </tbody>
+      </table>
+    </div>
+
+    <img src="assets/images/RD.jpg" alt="Research & Technology Breakthroughs" />
+  </section>
+
   </main>
 
   <footer>
