--- a/FX.html
+++ b/FX.html
@@ -274,19 +274,11 @@
 
   <main>
     <!-- Your blog and content sections remain here -->
+	<section id="blog">
+    <h2><i class="fas fa-pen-nib"></i> Quant Research </h2>
+    
+  </section>
 
-     <section id="intro">
-      <h2>Welcome</h2>
-      <img src="assets/images/ratanlal-mahanta.jpg" alt="Ratanlal Mahanta" />
-      <p>With 12 years of experience in <a href="https://en.wikipedia.org/wiki/Computational_finance" target="_blank">Computational Finance</a> and AI, I lead with a hands-on approach to developing and deploying <a href="https://en.wikipedia.org/wiki/Quantitative_analysis_(finance)#Quantitative_investment_management" target="_blank">advanced quantitative models</a>. My work integrates machine learning, stochastic processes, and complex risk management frameworks to address critical challenges in finance.</p>
-      <p>I build advanced simulation engines for pricing exotic options, XVA, and FRTB frameworks. I lead development of reusable model validation frameworks covering IRRBB, CVA, repo risk, and historical VaR. My work blends regulatory precision, ML inference, stochastic modeling, and capital analytics.</p>
-      <p>I’ve authored practical frameworks on topics like Bermudan swaption LSM hedging, t-copula basket default swaps, CDS pricing under Merton models, and repo haircut–spread dynamics. I develop institutional training programs, dashboards for audit-ready model governance, and LaTeX-based research deliverables.</p>
-      <p>My current focus: intelligent validation systems, Bayesian credit models, dynamic liquidity simulation under FRTB-SA, and margin stress engines with FX/repo contagion effects. Let’s shape robust financial systems through quant rigor and applied AI.</p>
-      <p>I specialize in the calibration and application of models such as the Heston model, Hull-White interest rate models, and the Merton model, tailoring them to meet the precise demands of risk management and market risk.</p>
-      <p>My recent projects include FRTB simulation frameworks, tail risk hedging, XVA and Bayesian inference models for predictive analytics. Explore my work and research to discover how AI and finance converge to shape tomorrow's markets.</p>
-      <p>With a deep focus on algorithmic trading infrastructure, I’ve built a modular, production-grade Python framework that spans the full lifecycle of quantitative strategy development—from signal generation to live server deployment.</p>
-      <p>This system integrates financial time series modeling, machine learning, and technical indicators to construct momentum, mean-reversion, and multi-factor rule-based strategies. I’ve engineered reusable components for data ingestion, preprocessing pipelines, and signal processing.</p>
-    </section>
   
   </main>
 
