--- a/about.html
+++ b/about.html
@@ -275,18 +275,38 @@
   <main>
     <!-- Your blog and content sections remain here -->
 
-     <section id="intro">
-      <h2>Welcome</h2>
-      <img src="assets/images/ratanlal-mahanta.jpg" alt="Ratanlal Mahanta" />
-      <p>With 12 years of experience in <a href="https://en.wikipedia.org/wiki/Computational_finance" target="_blank">Computational Finance</a> and AI, I lead with a hands-on approach to developing and deploying <a href="https://en.wikipedia.org/wiki/Quantitative_analysis_(finance)#Quantitative_investment_management" target="_blank">advanced quantitative models</a>. My work integrates machine learning, stochastic processes, and complex risk management frameworks to address critical challenges in finance.</p>
-      <p>I build advanced simulation engines for pricing exotic options, XVA, and FRTB frameworks. I lead development of reusable model validation frameworks covering IRRBB, CVA, repo risk, and historical VaR. My work blends regulatory precision, ML inference, stochastic modeling, and capital analytics.</p>
-      <p>I’ve authored practical frameworks on topics like Bermudan swaption LSM hedging, t-copula basket default swaps, CDS pricing under Merton models, and repo haircut–spread dynamics. I develop institutional training programs, dashboards for audit-ready model governance, and LaTeX-based research deliverables.</p>
-      <p>My current focus: intelligent validation systems, Bayesian credit models, dynamic liquidity simulation under FRTB-SA, and margin stress engines with FX/repo contagion effects. Let’s shape robust financial systems through quant rigor and applied AI.</p>
-      <p>I specialize in the calibration and application of models such as the Heston model, Hull-White interest rate models, and the Merton model, tailoring them to meet the precise demands of risk management and market risk.</p>
-      <p>My recent projects include FRTB simulation frameworks, tail risk hedging, XVA and Bayesian inference models for predictive analytics. Explore my work and research to discover how AI and finance converge to shape tomorrow's markets.</p>
-      <p>With a deep focus on algorithmic trading infrastructure, I’ve built a modular, production-grade Python framework that spans the full lifecycle of quantitative strategy development—from signal generation to live server deployment.</p>
-      <p>This system integrates financial time series modeling, machine learning, and technical indicators to construct momentum, mean-reversion, and multi-factor rule-based strategies. I’ve engineered reusable components for data ingestion, preprocessing pipelines, and signal processing.</p>
+    <section>
+      <h2>Welcome!</h2>
+      <!-- Intro content remains unchanged -->
+      <p>I’m <strong>Ratanlal Mahanta</strong>, a dedicated researcher and lead scientist specializing in 
+        <a href="https://en.wikipedia.org/wiki/Computational_finance" target="_blank" rel="noopener"><strong>Computational Finance</strong></a> and <strong>AI-driven Quantitative Research</strong>.
+      </p>
+	   <p>Currently, I work on pioneering projects that integrate <strong>machine learning</strong>, <strong>stochastic modeling</strong>, and <strong>scenario simulations</strong> to push the boundaries of finance. My expertise spans various fields, including <strong>option pricing models</strong>, <strong>credit valuation adjustments (CVA)</strong>, <strong>climate risk</strong> in finance, and <strong>tail risk hedging</strong> through scenario simulations. I have an extensive background in <strong>Bayesian machine learning</strong>, <strong>quantitative trading strategies</strong>, and <strong>dynamic hedging</strong>.</p>
+
+        <p>My career bridges the depth of quantitative development and the rigor of model validation. I’ve led validations of high-impact models including CVA, IRRBB, FRTB-SA, repo VaR, and various internal capital engines. I work closely with regulatory stakeholders and internal audit teams to establish robust governance frameworks, helping financial institutions meet both compliance and innovation goals.</p>
+
+        <p>With over <strong>330 citations</strong> and an <strong>h-index of 10</strong>, my work is recognized in global conferences such as <strong>IRMC 2024</strong>, <strong>IMRC Milan</strong>, and the <strong>Odisha AI Conference 2024</strong>. My contributions span cutting-edge research and enterprise-grade implementation, from <strong>Monte Carlo CVA engines</strong> and <strong>deep hedging via reinforcement learning</strong> to <strong>fire-sale repo haircut stress testing</strong> and <strong>wrong-way risk modeling via copulas</strong>.</p>
+
+        <p>I’ve built full validation stacks, dashboards, and regulatory submission toolkits that integrate Python, Excel, and Streamlit. My strategic focus includes aligning AI-powered quant models with capital planning, scenario design, NMRF assessments, and ESG-aligned stress frameworks. With a strong foundation in startup culture and product innovation, I combine agility and technical depth to solve frontier problems in financial risk and derivatives modeling.</p>
+
+        <p>Here, I aim to share insights into my evolving projects—from <strong>quantitative alpha strategy development</strong> to <strong>green finance risk engines</strong>—while showcasing how <strong>AI, regulation, and quantitative finance</strong> are converging to reshape global markets.</p>
+      <!-- Full detailed bio here (as in your message above) -->
     </section>
+
+    <section id="highlights">
+      <h3><i class="fas fa-star"></i> Highlights</h3>
+      <ul>
+        <li><strong>Quantitative Expertise</strong>: Option pricing, credit valuation, climate risk, and stochastic volatility modeling.</li>
+        <li><strong>Risk Management Focus</strong>: Scenario simulation for tail risk hedging and dynamic hedging.</li>
+        <li><strong>Model Validation Leadership</strong>: CVA Greeks, repo VaR, FRTB-SA, IRRBB, and deep audit tooling.</li>
+        <li><strong>Innovative Research</strong>: AI/ML-driven finance with reinforcement learning and Bayesian inference models.</li>
+        <li><strong>Regulatory Readiness</strong>: Alignment with ECB, CBUAE, PRA and audit-driven stress scenario platforms.</li>
+        <li><strong>Recognized Scholar</strong>: Publications, citations, and invited talks at leading finance and AI forums.</li>
+        <li><strong>System Development</strong>: Streamlit/Excel dashboards, quant API stacks, and live scenario simulators.</li>
+        <li><strong>Thought Leadership</strong>: Driving the frontier in capital modeling, margin optimization, and AI governance.</li>
+      </ul>
+    </section>
+
   
   </main>
 
