--- a/blog_post_P1.html
+++ b/blog_post_P1.html
@@ -273,22 +273,62 @@
   </aside>
 
   <main>
-    <!-- Your blog and content sections remain here -->
+<!-- Publications Section -->
+  <section id="strategies">
+    <h2>Advanced Trading Strategies</h2>
 
-     <section id="intro">
-      <h2>Welcome</h2>
-      <img src="assets/images/ratanlal-mahanta.jpg" alt="Ratanlal Mahanta" />
-      <p>With 12 years of experience in <a href="https://en.wikipedia.org/wiki/Computational_finance" target="_blank">Computational Finance</a> and AI, I lead with a hands-on approach to developing and deploying <a href="https://en.wikipedia.org/wiki/Quantitative_analysis_(finance)#Quantitative_investment_management" target="_blank">advanced quantitative models</a>. My work integrates machine learning, stochastic processes, and complex risk management frameworks to address critical challenges in finance.</p>
-      <p>I build advanced simulation engines for pricing exotic options, XVA, and FRTB frameworks. I lead development of reusable model validation frameworks covering IRRBB, CVA, repo risk, and historical VaR. My work blends regulatory precision, ML inference, stochastic modeling, and capital analytics.</p>
-      <p>I’ve authored practical frameworks on topics like Bermudan swaption LSM hedging, t-copula basket default swaps, CDS pricing under Merton models, and repo haircut–spread dynamics. I develop institutional training programs, dashboards for audit-ready model governance, and LaTeX-based research deliverables.</p>
-      <p>My current focus: intelligent validation systems, Bayesian credit models, dynamic liquidity simulation under FRTB-SA, and margin stress engines with FX/repo contagion effects. Let’s shape robust financial systems through quant rigor and applied AI.</p>
-      <p>I specialize in the calibration and application of models such as the Heston model, Hull-White interest rate models, and the Merton model, tailoring them to meet the precise demands of risk management and market risk.</p>
-      <p>My recent projects include FRTB simulation frameworks, tail risk hedging, XVA and Bayesian inference models for predictive analytics. Explore my work and research to discover how AI and finance converge to shape tomorrow's markets.</p>
-      <p>With a deep focus on algorithmic trading infrastructure, I’ve built a modular, production-grade Python framework that spans the full lifecycle of quantitative strategy development—from signal generation to live server deployment.</p>
-      <p>This system integrates financial time series modeling, machine learning, and technical indicators to construct momentum, mean-reversion, and multi-factor rule-based strategies. I’ve engineered reusable components for data ingestion, preprocessing pipelines, and signal processing.</p>
-    </section>
-  
-  </main>
+    <div class="strategy">
+      <h3>1. Trend Following Strategies</h3>
+      <p>
+        We analyze financial time series spanning 10–20 years to uncover underlying market direction using advanced quant models.
+        Techniques include <strong>Genetic Algorithms</strong>, <strong>Support Vector Machines (SVMs)</strong>, and <strong>Artificial Neural Networks (ANNs)</strong>,
+        which allow adaptive, non-linear modeling of price dynamics. These models are particularly effective in capturing persistent
+        momentum across asset classes.
+      </p>
+    </div>
+
+    <div class="strategy">
+      <h3>2. Mean Reversion Strategies (Statistical Arbitrage)</h3>
+      <p>
+        Statistical arbitrage is a market-neutral strategy that involves matching long and short positions in highly correlated
+        instruments—such as pairs of stocks, ETFs, or options. We compute the <strong>half-life of mean reversion</strong> using an
+        <strong>Ornstein-Uhlenbeck process</strong>, allowing precise calibration of historical lookback windows. Cointegration
+        analysis forms the core of identifying tradeable spreads.
+      </p>
+    </div>
+
+    <div class="strategy">
+      <h3>3. Volatility Arbitrage Strategies</h3>
+      <p>
+        These strategies exploit mispricings between implied and realized volatility. Due to the <em>volatility smile</em>,
+        out-of-the-money options often trade at inflated prices. By shorting high-IV strikes and longing lower-IV counterparts,
+        we construct delta-neutral portfolios. Greeks—especially <strong>Vega</strong>, <strong>Gamma</strong>, and <strong>Theta</strong>—
+        are dynamically monitored to manage risk and capture time decay asymmetries.
+      </p>
+    </div>
+
+    <div class="strategy">
+      <h3>4. Gamma Scalping Strategies</h3>
+      <p>
+        Gamma scalping profits from large movements in the underlying while maintaining delta neutrality. Short options positions
+        typically have <strong>negative gamma</strong>, while long positions provide <strong>positive gamma</strong>. As delta changes
+        with price, we adjust hedges dynamically. Positive gamma helps traders outperform delta forecasts by profiting more on
+        large moves and losing less on small reversals.
+      </p>
+    </div>
+
+    <div class="strategy">
+      <h3>5. Machine Learning-Based Strategies</h3>
+      <p>
+        Predicting market direction is notoriously noisy. We employ <strong>Deep Neural Networks (DNNs)</strong> with multiple hidden
+        layers to classify market states in a binary manner—upward or downward. Additionally, we apply <strong>K-Means clustering</strong>,
+        an unsupervised algorithm, to segment market regimes without labeled data. This approach is useful in real-world settings
+        where human labeling is infeasible.
+      </p>
+    </div>
+  </section>
+   
+ </main>
 
   <footer>
     <p>&copy; 2025 Ratanlal Mahanta | All Rights Reserved</p>
