--- a/cts.html
+++ b/cts.html
@@ -273,21 +273,87 @@
   </aside>
 
   <main>
-    <!-- Your blog and content sections remain here -->
+      <body>
+  <div class="container">
+    <h1>NDX and NDX-Listed Index Development, Rebalancing, and Maintenance</h1>
 
-     <section id="intro">
-      <h2>Welcome</h2>
-      <img src="assets/images/ratanlal-mahanta.jpg" alt="Ratanlal Mahanta" />
-      <p>With 12 years of experience in <a href="https://en.wikipedia.org/wiki/Computational_finance" target="_blank">Computational Finance</a> and AI, I lead with a hands-on approach to developing and deploying <a href="https://en.wikipedia.org/wiki/Quantitative_analysis_(finance)#Quantitative_investment_management" target="_blank">advanced quantitative models</a>. My work integrates machine learning, stochastic processes, and complex risk management frameworks to address critical challenges in finance.</p>
-      <p>I build advanced simulation engines for pricing exotic options, XVA, and FRTB frameworks. I lead development of reusable model validation frameworks covering IRRBB, CVA, repo risk, and historical VaR. My work blends regulatory precision, ML inference, stochastic modeling, and capital analytics.</p>
-      <p>I’ve authored practical frameworks on topics like Bermudan swaption LSM hedging, t-copula basket default swaps, CDS pricing under Merton models, and repo haircut–spread dynamics. I develop institutional training programs, dashboards for audit-ready model governance, and LaTeX-based research deliverables.</p>
-      <p>My current focus: intelligent validation systems, Bayesian credit models, dynamic liquidity simulation under FRTB-SA, and margin stress engines with FX/repo contagion effects. Let’s shape robust financial systems through quant rigor and applied AI.</p>
-      <p>I specialize in the calibration and application of models such as the Heston model, Hull-White interest rate models, and the Merton model, tailoring them to meet the precise demands of risk management and market risk.</p>
-      <p>My recent projects include FRTB simulation frameworks, tail risk hedging, XVA and Bayesian inference models for predictive analytics. Explore my work and research to discover how AI and finance converge to shape tomorrow's markets.</p>
-      <p>With a deep focus on algorithmic trading infrastructure, I’ve built a modular, production-grade Python framework that spans the full lifecycle of quantitative strategy development—from signal generation to live server deployment.</p>
-      <p>This system integrates financial time series modeling, machine learning, and technical indicators to construct momentum, mean-reversion, and multi-factor rule-based strategies. I’ve engineered reusable components for data ingestion, preprocessing pipelines, and signal processing.</p>
-    </section>
-  
+    <div class="section">
+      <h2>Tools & Technologies</h2>
+      <ul>
+        <li><strong>Languages:</strong> R (tidyverse, data.table, quantmod, lubridate)</li>
+        <li><strong>Platform:</strong> Databricks (R Notebooks, Delta Lake)</li>
+        <li><strong>Data Sources:</strong> NASDAQ feeds, SEC filings</li>
+        <li><strong>Storage:</strong> Delta Lake</li>
+        <li><strong>Orchestration:</strong> Databricks Jobs, DBFS mount</li>
+        <li><strong>Visualization:</strong> ggplot2, plotly, Databricks Dashboards</li>
+      </ul>
+    </div>
+
+    <div class="section">
+      <h2>Objective</h2>
+      <p>Design and automate a suite of customized indices based on NDX-listed stocks, including rebalancing, performance benchmarking, and full audit trail maintenance.</p>
+    </div>
+
+    <div class="section">
+      <h2>Key Components</h2>
+
+      <h3>1. Index Design & Construction</h3>
+      <ul>
+        <li>Developed sectoral and thematic indices (e.g., NDX Index).</li>
+        <li>Rule-based screening: liquidity, float-adjusted market cap, listing type.</li>
+      </ul>
+
+      <h3>2. Data Pipeline (Databricks)</h3>
+      <ul>
+        <li>Ingested price, market cap, and sector data via APIs into Delta Lake.</li>
+        <li>Implemented full ETL using R Notebooks on Databricks platform.</li>
+      </ul>
+
+      <h3>3. Rebalancing Logic</h3>
+      <ul>
+        <li>Quarterly/monthly rebalancing using optimization via <code>quadprog</code>.</li>
+        <li>Scheduled with Databricks Jobs and stored as Delta tables with history.</li>
+      </ul>
+
+      <h3>4. Backtesting & Analytics</h3>
+      <ul>
+        <li>Calculated returns, volatility, Sharpe, drawdown, and tracking error.</li>
+        <li>Benchmarked against NDX Composite, QQQ, and thematic ETFs.</li>
+      </ul>
+
+      <h3>5. Maintenance Automation</h3>
+      <ul>
+        <li>Handled corporate actions (splits, delistings) automatically.</li>
+        <li>Alert system to flag violations in eligibility criteria.</li>
+      </ul>
+
+      <h3>6. Compliance & Audit Trail</h3>
+      <ul>
+        <li>Used Delta Lake versioning and Change Data Feed for traceability.</li>
+        <li>Each rebalance includes justification and rule-based logging.</li>
+      </ul>
+    </div>
+
+    <div class="section">
+      <h2>Outcomes</h2>
+      <ul>
+        <li>90% reduction in manual effort for index maintenance and rebalance.</li>
+        <li>Performance outperformance demonstrated in backtests (e.g., GreenTech index).</li>
+        <li>Comprehensive dashboard for index attribution and sector exposure.</li>
+      </ul>
+    </div>
+
+    <div class="section">
+      <h2>Future Enhancements</h2>
+      <ul>
+        <li>Incorporate ESG and alternative datasets.</li>
+        <li>Enable near-real-time streaming updates via Auto Loader.</li>
+      </ul>
+    </div>
+  </div>
+</body>
+
+
   </main>
 
   <footer>
