--- a/gpsk.html
+++ b/gpsk.html
@@ -273,21 +273,67 @@
   </aside>
 
   <main>
-    <!-- Your blog and content sections remain here -->
+      <body>
+  <h2>GPSK Investment Timeline</h2>
+  <div class="timeline">
+    <div class="container left">
+      <div class="content">
+        <h3>Mean Reversion - GPSK</h3>
+        <p>Developed and deployed statistical arbitrage strategies based on price reversion logic across equities and ETFs.</p>
+      </div>
+    </div>
+    <div class="container right">
+      <div class="content">
+        <h3>Momentum Strategy</h3>
+        <p>Designed trend-following algorithms for mid-frequency strategies using cross-asset signals and regime detection.</p>
+      </div>
+    </div>
+    <div class="container left">
+      <div class="content">
+        <h3>Vol Strategy</h3>
+        <p>Implemented volatility models using option.</p>
+      </div>
+    </div>
+    <div class="container right">
+      <div class="content">
+        <h3>HFT Desk Setup</h3>
+        <p>Led infrastructure and codebase setup for high-frequency trading systems; latency optimization & exchange connectivity.</p>
+      </div>
+    </div>
+    <div class="container left">
+      <div class="content">
+        <h3>Algo Strategies Development</h3>
+        <p>Built multiple alpha engines using machine learning, signal stacking, and market microstructure models.</p>
+      </div>
+    </div>
+    <div class="container right">
+      <div class="content">
+        <h3>Colo Management</h3>
+        <p>Oversaw co-location infrastructure for low-latency execution and redundancy across Exchange data center.</p>
+      </div>
+    </div>
+    <div class="container left">
+      <div class="content">
+        <h3>System & Internal Audit</h3>
+        <p>Ensured system robustness, audit logging, and compliance with internal trading rules and external regulations.</p>
+      </div>
+    </div>
+    <div class="container right">
+      <div class="content">
+        <h3>Trading and Execution</h3>
+        <p>Managed live trading, risk monitoring, order execution optimization, and P&amp;L attribution across strategies.</p>
+      </div>
+    </div>
+    <div class="container left">
+      <div class="content">
+        <h3>Head of Business Quant Desk</h3>
+        <p>Directed the quant team across R&amp;D, implementation, and live deployment; strategic leadership and team mentoring.</p>
+      </div>
+    </div>
+  </div>
+</body>
 
-     <section id="intro">
-      <h2>Welcome</h2>
-      <img src="assets/images/ratanlal-mahanta.jpg" alt="Ratanlal Mahanta" />
-      <p>With 12 years of experience in <a href="https://en.wikipedia.org/wiki/Computational_finance" target="_blank">Computational Finance</a> and AI, I lead with a hands-on approach to developing and deploying <a href="https://en.wikipedia.org/wiki/Quantitative_analysis_(finance)#Quantitative_investment_management" target="_blank">advanced quantitative models</a>. My work integrates machine learning, stochastic processes, and complex risk management frameworks to address critical challenges in finance.</p>
-      <p>I build advanced simulation engines for pricing exotic options, XVA, and FRTB frameworks. I lead development of reusable model validation frameworks covering IRRBB, CVA, repo risk, and historical VaR. My work blends regulatory precision, ML inference, stochastic modeling, and capital analytics.</p>
-      <p>I’ve authored practical frameworks on topics like Bermudan swaption LSM hedging, t-copula basket default swaps, CDS pricing under Merton models, and repo haircut–spread dynamics. I develop institutional training programs, dashboards for audit-ready model governance, and LaTeX-based research deliverables.</p>
-      <p>My current focus: intelligent validation systems, Bayesian credit models, dynamic liquidity simulation under FRTB-SA, and margin stress engines with FX/repo contagion effects. Let’s shape robust financial systems through quant rigor and applied AI.</p>
-      <p>I specialize in the calibration and application of models such as the Heston model, Hull-White interest rate models, and the Merton model, tailoring them to meet the precise demands of risk management and market risk.</p>
-      <p>My recent projects include FRTB simulation frameworks, tail risk hedging, XVA and Bayesian inference models for predictive analytics. Explore my work and research to discover how AI and finance converge to shape tomorrow's markets.</p>
-      <p>With a deep focus on algorithmic trading infrastructure, I’ve built a modular, production-grade Python framework that spans the full lifecycle of quantitative strategy development—from signal generation to live server deployment.</p>
-      <p>This system integrates financial time series modeling, machine learning, and technical indicators to construct momentum, mean-reversion, and multi-factor rule-based strategies. I’ve engineered reusable components for data ingestion, preprocessing pipelines, and signal processing.</p>
-    </section>
-  
+
   </main>
 
   <footer>
