--- a/projects.html
+++ b/projects.html
@@ -221,7 +221,7 @@
         <ul class="submenu" id="rdSubmenu">
           <li><a href="about.html">About</a></li>
           <li><a href="projects.html">Projects</a></li>
-          <li><a href="publications.html">Publications</a></li>
+          <li><a href="Publications.html">Publications</a></li>
           <li><a href="Lab.html">Lab & Innovation</a></li>
         </ul>
       </li>
@@ -275,18 +275,85 @@
   <main>
     <!-- Your blog and content sections remain here -->
 
-     <section id="intro">
-      <h2>Welcome</h2>
-      <img src="assets/images/ratanlal-mahanta.jpg" alt="Ratanlal Mahanta" />
-      <p>With 12 years of experience in <a href="https://en.wikipedia.org/wiki/Computational_finance" target="_blank">Computational Finance</a> and AI, I lead with a hands-on approach to developing and deploying <a href="https://en.wikipedia.org/wiki/Quantitative_analysis_(finance)#Quantitative_investment_management" target="_blank">advanced quantitative models</a>. My work integrates machine learning, stochastic processes, and complex risk management frameworks to address critical challenges in finance.</p>
-      <p>I build advanced simulation engines for pricing exotic options, XVA, and FRTB frameworks. I lead development of reusable model validation frameworks covering IRRBB, CVA, repo risk, and historical VaR. My work blends regulatory precision, ML inference, stochastic modeling, and capital analytics.</p>
-      <p>I’ve authored practical frameworks on topics like Bermudan swaption LSM hedging, t-copula basket default swaps, CDS pricing under Merton models, and repo haircut–spread dynamics. I develop institutional training programs, dashboards for audit-ready model governance, and LaTeX-based research deliverables.</p>
-      <p>My current focus: intelligent validation systems, Bayesian credit models, dynamic liquidity simulation under FRTB-SA, and margin stress engines with FX/repo contagion effects. Let’s shape robust financial systems through quant rigor and applied AI.</p>
-      <p>I specialize in the calibration and application of models such as the Heston model, Hull-White interest rate models, and the Merton model, tailoring them to meet the precise demands of risk management and market risk.</p>
-      <p>My recent projects include FRTB simulation frameworks, tail risk hedging, XVA and Bayesian inference models for predictive analytics. Explore my work and research to discover how AI and finance converge to shape tomorrow's markets.</p>
-      <p>With a deep focus on algorithmic trading infrastructure, I’ve built a modular, production-grade Python framework that spans the full lifecycle of quantitative strategy development—from signal generation to live server deployment.</p>
-      <p>This system integrates financial time series modeling, machine learning, and technical indicators to construct momentum, mean-reversion, and multi-factor rule-based strategies. I’ve engineered reusable components for data ingestion, preprocessing pipelines, and signal processing.</p>
+    <header>
+        <h1><i class="fas fa-flask"></i> Projects Portfolio</h1>
+    </header>
+
+    <section id="projects">
+        <h2><i class="fas fa-lightbulb"></i> Research & Development Projects</h2>
+
+        <div class="project">
+            <h3><i class="fas fa-robot"></i> <a href="blog_post_1.html">AI-Driven Financial Markets</a></h3>
+            <p>Developed cutting-edge artificial intelligence tools to enhance financial market modeling. Focus areas included predictive analytics, reinforcement learning for trading decisions, deep learning for volatility clustering, and stress testing using real-time news and sentiment data pipelines.</p>
+        </div>
+
+        <div class="project">
+            <h3><i class="fas fa-chart-line"></i><a href="blog_post_P1.html"> Quant Equity Selection Model</a></h3>
+            <p>Built a supervised learning framework that dynamically selects equities based on sector rotation signals, Index Rebalancing Engine, macroeconomic indicators,Tail Risk Hedging, and risk-adjusted return forecasts. The model uses ensemble methods and Bayesian optimization for hyperparameter tuning to ensure robust portfolio construction.</p>
+        </div>
+
+        <div class="project">
+            <h3><i class="fas fa-chart-area"></i><a href="blog_post_P2.html"> Heston Model Calibration for Volatility</a></h3>
+            <p>Implemented a calibration engine for the Heston stochastic volatility model, using least squares fitting to implied volatilities from options markets. Conducted parameter stability analysis, error surface visualizations, and comparative backtests with Black-Scholes and SABR models.</p>
+        </div>
+
+        <div class="project">
+            <h3><i class="fas fa-handshake"></i> Credit Valuation Adjustment (CVA) Computation</h3>
+            <p>Designed a robust CVA engine utilizing Monte Carlo simulations with exposure paths and default probabilities. Incorporated credit spreads, wrong-way risk, and collateral agreements to model bilateral CVA and analyze counterparty credit risk profiles across asset classes.</p>
+        </div>
+
+        <div class="project">
+            <h3><i class="fas fa-percentage"></i> Hull-White Short-Rate Model Calibration</h3>
+            <p>Calibrated the Hull-White interest rate model using yield curve data and option market quotes. Integrated QuantLib for simulation of future interest rate paths and sensitivity analysis under various market shocks, enabling use in ALM and risk-neutral pricing frameworks.</p>
+        </div>
+
+        <div class="project">
+            <h3><i class="fas fa-university"></i> FRTB Implementation</h3>
+            <p>Developed full-stack analytics for the Fundamental Review of the Trading Book (FRTB), including sensitivities-based standardized approach (SBA), risk factor eligibility tests (RFET), and desk-level capital attribution. Validated internal models and supported regulatory submissions.</p>
+        </div>
+
+        <div class="project">
+            <h3><i class="fas fa-leaf"></i> Green Finance & Climate Risk Modeling</h3>
+            <p>Contributed to climate finance research through development of models linking emissions to asset exposures. Integrated EEIO data, physical risk scenarios, and climate-adjusted discounting. Work included submission to academic journals on sustainable finance innovations.</p>
+        </div>
+
+        <div class="project">
+            <h3><i class="fas fa-cogs"></i> Quantitative Trading Strategies</h3>
+            <p>Designed and tested alpha-generating trading strategies combining time-series momentum, machine learning classification signals,Stat Arbitarge, and Kelly criterion-based capital allocation. Deployed backtesting platform with walk-forward validation and multi-asset optimization.</p>
+        </div>
+
+        <div class="project">
+            <h3><i class="fas fa-random"></i> Monte Carlo Simulation Engine for Credit Loss Forecasting</h3>
+            <p>Built a Monte Carlo simulation engine to project credit losses under IFRS 9 using ARIMA-forecasted macroeconomic variables and dynamic exposure paths. Incorporated LGD/EAD modeling, lifetime PD, and stress scenario overlays for economic capital analysis.</p>
+        </div>
+
+        <div class="project">
+            <h3><i class="fas fa-recycle"></i> Hybrid Scope 1/2/3 GHG Estimator</h3>
+            <p>Developed a comprehensive GHG emissions estimator combining EEIO analysis, process-based LCA, and Monte Carlo methods. Mapped financed emissions for financial portfolios and generated uncertainty bands for strategic planning under regulatory and climate risk guidelines.</p>
+        </div>
+
+        <div class="project">
+            <h3><i class="fas fa-money-check-alt"></i> Bermudan Swaption Pricing Platform</h3>
+            <p>Engineered a flexible simulation platform for pricing and hedging Bermudan swaptions. Leveraged QuantLib with support for G2++ and Hull-White models, incorporating American-style optionality, volatility surfaces, DV01/Vega analytics, and hedge backtesting strategies.</p>
+        </div>
+
+        <div class="project">
+            <h3><i class="fas fa-shield-alt"></i> Validation Framework for FRTB & CVA</h3>
+            <p>Led end-to-end model validation for market and counterparty credit risk models. Included P&L attribution, benchmarking, backtesting, and regulatory documentation for FRTB sensitivities, stressed ES, and CVA exposure models across global trading desks.</p>
+        </div>
+
+        <div class="project">
+            <h3><i class="fas fa-chart-bar"></i> CDS Spread Calibration with Merton Model</h3>
+            <p>Built a Merton structural model for estimating default probabilities and calibrating CDS term structures. Combined historical volatility estimation, firm balance sheet analysis, and ARIMA-based forecasts for forward CDS curve projections and pricing.</p>
+        </div>
+
+        <div class="project">
+            <h3><i class="fas fa-water"></i> Liquidity Risk and IRRBB Simulator</h3>
+            <p>Developed a simulation-based ALM engine modeling behavioral deposit runoff, interest rate shocks, and NII sensitivity. Used this framework to assess interest rate risk in the banking book (IRRBB) and perform liquidity stress testing under adverse curve shifts.</p>
+        </div>
     </section>
+
+
   
   </main>
 
