--- a/vol.html
+++ b/vol.html
@@ -147,6 +147,12 @@
       </ul>
     </section>
 
+ <img src="assets/images/cds1.png" alt="Sensitivity Analysis" />
+
+ <img src="assets/images/cds2.png" alt="CDS Spread Time Series Forecast with ARIMA" />
+
+ <img src="assets/images/cds3.png" alt="VaR and CVAR" />
+
     <section id="summary">
       <h2>Summary</h2>
       <ul>
