--- a/vol.html
+++ b/vol.html
@@ -161,6 +161,15 @@
         <li>Stress test \(\sigma\), \(r\), \(R\), and \(D\) to gauge sensitivity.</li>
       </ul>
     </section>
+
+    <section id="Reference">
+      <h2>Reference</h2>
+      <ul>
+        <li>Model defaults via Merton; <a href="https://media.licdn.com/dms/document/media/v2/D4D2DAQEvUmTxqk-R4w/profile-treasury-document-pdf-analyzed/B4DZXWUkKyG8Ag-/0/1743057472138?e=1756339200&v=beta&t=hxxKoAldryOCOMC7gqJdbhqV2l3Aw2ijwPGfmQ-7poE" target="_blank">CDS Pricing</a>.</li>
+        
+      </ul>
+    </section>
+
   </main>
 
   <footer>
