--- a/vol.html
+++ b/vol.html
@@ -229,8 +229,14 @@
           \right]
         \]
       </div>
+    <img src="assets/images/cds1.png" alt="Heston surface example" />
+ <img src="assets/images/cds2.png" alt="Heston surface example" />
+
+ <img src="assets/images/cds3.png" alt="Heston surface example" />
+
     </section>
   
+
     <section id="summary">
       <h2>Summary</h2>
       <ul>
