Heston.html Heston

--- a/Heston.html
+++ b/Heston.html
@@ -141,7 +141,7 @@
     <h1>Heston Model Calibration for Volatility</h1>
 
     <p>
-      The Heston model is a popular stochastic volatility model used in <a href="dp.html" target="_blank">derivative pricing</a> particularly for options where implied
+      The Heston model is a popular stochastic volatility model used in <a href="dp.html">derivative pricing</a> particularly for options where implied
       volatility varies with strike and maturity. It models the underlying asset price and its variance as coupled stochastic
       processes:
     </p>
